--- a/nicnbk-ui-angular2/src/app/reporting/view/consolidated.kzt.form.13.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/consolidated.kzt.form.13.nb.reporting.component.html
@@ -155,8 +155,8 @@
                 <button class="btn-xs btn-primary pull-right" (click)="export()"><span class="glyphicon glyphicon-list-alt"></span>&nbsp;Export</button>
             </div>
             <br/>
-            <div class="row withpadding" style="overflow-y: scroll;">
-                <table [ngBusy]="busy" class="table table-hover table-condensed" style="font-size: small">
+            <div [ngBusy]="{busy: busyExport, message: 'Exporting...'}" class="row withpadding" style="overflow-y: scroll;">
+                <table [ngBusy]="[busy]" class="table table-hover table-condensed" style="font-size: small">
                     <tr bgcolor="#e7e7e7">
                         <td rowspan="2">Номер группы субсчетов</td>
                         <td rowspan="2">Вид финансовых обязательств</td>
