--- a/nicnbk-ui-angular2/src/app/reporting/view/consolidated.kzt.form.14.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/consolidated.kzt.form.14.nb.reporting.component.html
@@ -28,7 +28,7 @@
         <button class="btn-xs btn-primary pull-right" (click)="export()"><span class="glyphicon glyphicon-list-alt"></span>&nbsp;Export</button>
     </div>
     <br/>
-    <div class="row withpadding">
+    <div [ngBusy]="{busy: busyExport, message: 'Exporting...'}" class="row withpadding">
         <table [ngBusy]="busy" class="table table-hover table-condensed" style="font-size: small">
             <tr bgcolor="#e7e7e7">
                 <td rowspan="3">Номер группы субсчетов</td>
