My new message 3

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -858,43 +858,75 @@
                                         <table class="table table-hover table-responsive" style="font-size: smaller">
                                             <tr>
                                                 <th>
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(1)" [disabled]="fund.id == 0 || fund.id == null">
-                                                        Company
+                                                    Company
+                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(11)" [disabled]="fund.id == 0 || fund.id == null">
+                                                        <p>&uarr;</p>
+                                                    </button>
+                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(12)" [disabled]="fund.id == 0 || fund.id == null">
+                                                        <p>&darr;</p>
                                                     </button>
                                                 </th>
                                                 <th>
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(2)" [disabled]="fund.id == 0 || fund.id == null">
-                                                        Cash invested
+                                                    Cash invested
+                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(21)" [disabled]="fund.id == 0 || fund.id == null">
+                                                        <p>&uarr;</p>
+                                                    </button>
+                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(22)" [disabled]="fund.id == 0 || fund.id == null">
+                                                        <p>&darr;</p>
                                                     </button>
                                                 </th>
                                                 <th>
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(3)" [disabled]="fund.id == 0 || fund.id == null">
-                                                        Realized Proceeds
+                                                    Realized Proceeds
+                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(31)" [disabled]="fund.id == 0 || fund.id == null">
+                                                        <p>&uarr;</p>
+                                                    </button>
+                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(32)" [disabled]="fund.id == 0 || fund.id == null">
+                                                        <p>&darr;</p>
                                                     </button>
                                                 </th>
                                                 <th>
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(4)" [disabled]="fund.id == 0 || fund.id == null">
-                                                        Unrealized Value
+                                                    Unrealized Value
+                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(41)" [disabled]="fund.id == 0 || fund.id == null">
+                                                        <p>&uarr;</p>
+                                                    </button>
+                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(42)" [disabled]="fund.id == 0 || fund.id == null">
+                                                        <p>&darr;</p>
                                                     </button>
                                                 </th>
                                                 <th>
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(5)" [disabled]="fund.id == 0 || fund.id == null">
-                                                        Total Value
+                                                    Total Value
+                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(51)" [disabled]="fund.id == 0 || fund.id == null">
+                                                        <p>&uarr;</p>
+                                                    </button>
+                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(52)" [disabled]="fund.id == 0 || fund.id == null">
+                                                        <p>&darr;</p>
                                                     </button>
                                                 </th>
                                                 <th>
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(6)" [disabled]="fund.id == 0 || fund.id == null">
-                                                        Multiple
+                                                    Multiple
+                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(61)" [disabled]="fund.id == 0 || fund.id == null">
+                                                        <p>&uarr;</p>
+                                                    </button>
+                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(62)" [disabled]="fund.id == 0 || fund.id == null">
+                                                        <p>&darr;</p>
                                                     </button>
                                                 </th>
                                                 <th>
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(7)" [disabled]="fund.id == 0 || fund.id == null">
-                                                        Gross IRR
+                                                    Gross IRR
+                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(71)" [disabled]="fund.id == 0 || fund.id == null">
+                                                        <p>&uarr;</p>
+                                                    </button>
+                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(72)" [disabled]="fund.id == 0 || fund.id == null">
+                                                        <p>&darr;</p>
                                                     </button>
                                                 </th>
                                                 <th>
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(8)" [disabled]="fund.id == 0 || fund.id == null">
-                                                        Net IRR
+                                                    Net IRR
+                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(81)" [disabled]="fund.id == 0 || fund.id == null">
+                                                        <p>&uarr;</p>
+                                                    </button>
+                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(82)" [disabled]="fund.id == 0 || fund.id == null">
+                                                        <p>&darr;</p>
                                                     </button>
                                                 </th>
                                             </tr>
