My new message 3

--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -859,73 +859,73 @@
                                             <tr>
                                                 <th>
                                                     Company
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(11)" [disabled]="fund.id == 0 || fund.id == null">
+                                                    <button type="submit" class="btn btn-link" (click)="sortPerformanceIdd(11)" [disabled]="fund.id == 0 || fund.id == null">
                                                         <p>&uarr;</p>
                                                     </button>
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(12)" [disabled]="fund.id == 0 || fund.id == null">
+                                                    <button type="submit" class="btn btn-link" (click)="sortPerformanceIdd(13)" [disabled]="fund.id == 0 || fund.id == null">
                                                         <p>&darr;</p>
                                                     </button>
                                                 </th>
                                                 <th>
                                                     Cash invested
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(21)" [disabled]="fund.id == 0 || fund.id == null">
+                                                    <button type="submit" class="btn btn-link" (click)="sortPerformanceIdd(21)" [disabled]="fund.id == 0 || fund.id == null">
                                                         <p>&uarr;</p>
                                                     </button>
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(22)" [disabled]="fund.id == 0 || fund.id == null">
+                                                    <button type="submit" class="btn btn-link" (click)="sortPerformanceIdd(23)" [disabled]="fund.id == 0 || fund.id == null">
                                                         <p>&darr;</p>
                                                     </button>
                                                 </th>
                                                 <th>
                                                     Realized Proceeds
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(31)" [disabled]="fund.id == 0 || fund.id == null">
+                                                    <button type="submit" class="btn btn-link" (click)="sortPerformanceIdd(31)" [disabled]="fund.id == 0 || fund.id == null">
                                                         <p>&uarr;</p>
                                                     </button>
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(32)" [disabled]="fund.id == 0 || fund.id == null">
+                                                    <button type="submit" class="btn btn-link" (click)="sortPerformanceIdd(33)" [disabled]="fund.id == 0 || fund.id == null">
                                                         <p>&darr;</p>
                                                     </button>
                                                 </th>
                                                 <th>
                                                     Unrealized Value
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(41)" [disabled]="fund.id == 0 || fund.id == null">
+                                                    <button type="submit" class="btn btn-link" (click)="sortPerformanceIdd(41)" [disabled]="fund.id == 0 || fund.id == null">
                                                         <p>&uarr;</p>
                                                     </button>
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(42)" [disabled]="fund.id == 0 || fund.id == null">
+                                                    <button type="submit" class="btn btn-link" (click)="sortPerformanceIdd(43)" [disabled]="fund.id == 0 || fund.id == null">
                                                         <p>&darr;</p>
                                                     </button>
                                                 </th>
                                                 <th>
                                                     Total Value
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(51)" [disabled]="fund.id == 0 || fund.id == null">
+                                                    <button type="submit" class="btn btn-link" (click)="sortPerformanceIdd(51)" [disabled]="fund.id == 0 || fund.id == null">
                                                         <p>&uarr;</p>
                                                     </button>
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(52)" [disabled]="fund.id == 0 || fund.id == null">
+                                                    <button type="submit" class="btn btn-link" (click)="sortPerformanceIdd(53)" [disabled]="fund.id == 0 || fund.id == null">
                                                         <p>&darr;</p>
                                                     </button>
                                                 </th>
                                                 <th>
                                                     Multiple
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(61)" [disabled]="fund.id == 0 || fund.id == null">
+                                                    <button type="submit" class="btn btn-link" (click)="sortPerformanceIdd(61)" [disabled]="fund.id == 0 || fund.id == null">
                                                         <p>&uarr;</p>
                                                     </button>
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(62)" [disabled]="fund.id == 0 || fund.id == null">
+                                                    <button type="submit" class="btn btn-link" (click)="sortPerformanceIdd(63)" [disabled]="fund.id == 0 || fund.id == null">
                                                         <p>&darr;</p>
                                                     </button>
                                                 </th>
                                                 <th>
                                                     Gross IRR
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(71)" [disabled]="fund.id == 0 || fund.id == null">
+                                                    <button type="submit" class="btn btn-link" (click)="sortPerformanceIdd(71)" [disabled]="fund.id == 0 || fund.id == null">
                                                         <p>&uarr;</p>
                                                     </button>
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(72)" [disabled]="fund.id == 0 || fund.id == null">
+                                                    <button type="submit" class="btn btn-link" (click)="sortPerformanceIdd(73)" [disabled]="fund.id == 0 || fund.id == null">
                                                         <p>&darr;</p>
                                                     </button>
                                                 </th>
                                                 <th>
                                                     Net IRR
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(81)" [disabled]="fund.id == 0 || fund.id == null">
+                                                    <button type="submit" class="btn btn-link" (click)="sortPerformanceIdd(81)" [disabled]="fund.id == 0 || fund.id == null">
                                                         <p>&uarr;</p>
                                                     </button>
-                                                    <button type="submit" class="btn btn-link" (click)="orderPerformanceIdd(82)" [disabled]="fund.id == 0 || fund.id == null">
+                                                    <button type="submit" class="btn btn-link" (click)="sortPerformanceIdd(83)" [disabled]="fund.id == 0 || fund.id == null">
                                                         <p>&darr;</p>
                                                     </button>
                                                 </th>
