--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -149,6 +149,8 @@
 
 <router-outlet></router-outlet>
 
-<!--<div class="copyrightText">&copy; 2016 NIC</div>-->
+<div class="copyrightText">&copy; 2018 National Investment Corporation NBK </div>
+<div class="copyrightText">UNIC v.1.1.0 </div>
+<br/>
 </body>
 </html>
